--- a/index.css
+++ b/index.css
@@ -1,3 +1,18 @@
+body {
+    display: flex; 
+}
 img{
     width: 100%;
+}
+
+#main-char {
+    width: 250px;
+    height: 250px;
+    background-color: aqua;
+}
+
+#opponet {
+    width: 250px;
+    height: 250px;
+    background-color: lightcoral;
 }
