--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
     color: white;
 }
 
-#opponet {
+#enemy {
     width: 500px;
     height: 575px;
     /* border: 1px solid lightcoral; */
@@ -43,7 +43,7 @@ nav {
     /* background-color: #2a7864; */
 }
 
-#hero-stats, #creature-stats {
+#hero-stats, #enemy-stats {
     /* border: 1px solid red;  */
 }
 
@@ -52,6 +52,6 @@ nav {
 
 }
 
-#snake {
+#enemy-img {
     height: 450px;
 }
